before zach breaks

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -10,6 +10,7 @@
     <!-- Google Font -->
     <link href="https://fonts.googleapis.com/css?family=Playfair+Display:400,900" rel="stylesheet">
     <script src="https://code.jquery.com/jquery-3.0.0.min.js" integrity="sha256-JmvOoLtYsmqlsWxa7mDSLMwa6dZ9rrIdtrrVYRnDRH0=" crossorigin="anonymous"></script>
+    <link rel="stylesheet" type="text/css" href="../node_modules/react-input-range/scss/_InputRange.scss">
     <link rel="stylesheet" type="text/css" href="../public/stylesheets/style.css">
   </head>
   <body>
