--- a/views/login.ejs
+++ b/views/login.ejs
@@ -3,12 +3,13 @@
   <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
     <title>Sitter Now</title>
+    <link href="https://fonts.googleapis.com/css?family=Playfair+Display:400,900" rel="stylesheet">
     <link rel='stylesheet' href='/stylesheets/style.css' />
   </head>
-  <body>
+  <body id="login">
     <h2>Sitter Now</h2>
 
-    <div>
+    <div id="loginbutton">
       <button onclick="lock.show();">Login or Sign Up</button>
     </div>
 
