--- a/views/login.ejs
+++ b/views/login.ejs
@@ -17,7 +17,7 @@
     <script type="text/javascript">
       var lock = new Auth0Lock('k5giYEZqoI9dw7fsNAeTLAU8nBFMpqtZ', 'babysit.auth0.com', {
         auth: {
-          redirectUrl: 'http://localhost:3000/callback',
+          redirectUrl: '/callback',
           responseType: 'code',
           params: {
             scope: 'openid email' // Learn about scopes: https://auth0.com/docs/scopes
