requests almost there

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,7 +1,7 @@
 body {
   padding: 60px;
   font-family: 'Playfair Display', serif;
-  background-color: #FAFAF5;
+  background-color: #F5F1F0;
 }
 
 
