--- a/views/index.ejs
+++ b/views/index.ejs
@@ -10,12 +10,13 @@
     <link href="https://fonts.googleapis.com/css?family=Playfair+Display:400,900" rel="stylesheet">
     <script src="https://code.jquery.com/jquery-3.0.0.min.js" integrity="sha256-JmvOoLtYsmqlsWxa7mDSLMwa6dZ9rrIdtrrVYRnDRH0=" crossorigin="anonymous"></script>
     <link rel="stylesheet" type="text/css" href="https://rawgit.com/davidchin/react-input-range/master/dist/react-input-range.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css">
     <link rel='stylesheet' href='/stylesheets/style.css' />
   </head>
   <body>
     <div class="container-fluid">
       <div id="heading">
-        <h1>Sitter Now</h1>
+        <h1 class="animated fadeInDown">Sitter Now</h1>
       <div class="row">
         <div id="container"></div>
     </div>
