--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -11,6 +11,9 @@ a {
 h2{
   text-align: center;
 }
+h3{
+  font-size: 34px;
+}
 input{
   display: inherit;
   padding: 2px;
@@ -66,6 +69,15 @@ margin-left: 100px;
 }
 .profile{
   background-color: #EBEBEB;
+  padding: 15px 30px 15px 30px;
+}
+.containerform{
+  padding: 20px 30px;
+}
+
+
+.profile p{
+  font-size: 22px;
 }
 #login{
   text-align: center;
