--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -24,10 +24,11 @@ input{
   margin-right: 20px;
 }
 .requesthere, .matcher{
-  min-height: 365px;
+  height: 465px;
   margin: 28px;
   margin-right: 20px;
   text-align: left;
+  background-color: #EBEBEB;
 }
 .allSitters{
 margin: 0 auto;
