--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -23,9 +23,9 @@ input{
   margin: 28px;
   margin-right: 20px;
 }
-.requesthere, .matcher{
+.requestshere, .matcher{
   height: 465px;
-  margin: 28px;
+  margin: 30px;
   margin-right: 20px;
   text-align: left;
   background-color: #EBEBEB;
@@ -56,8 +56,8 @@ margin: 0 auto;
   max-height: 200px;
 }
 .matcher img {
-  max-width: 220px;
-  max-height: 200px;
+  max-width: 320px;
+  max-height: 300px;
 }
 
 .InputRange-slider{
