unafraid of the future

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -27,8 +27,9 @@ input{
   height: 465px;
   margin: 30px;
   margin-right: 20px;
-  text-align: left;
+  text-align: center;
   background-color: #EBEBEB;
+  padding: 15px;
 }
 .allSitters{
 margin: 0 auto;
