--- a/views/index.ejs
+++ b/views/index.ejs
@@ -15,11 +15,12 @@
   </head>
   <body>
     <div class="container-fluid">
-      <div id="heading">
-        <h1 class="animated fadeInDown">Sitter Now</h1>
-      <div class="row">
-        <div id="container"></div>
-    </div>
+
+        <div id="contain">
+
+        </div>
+     </div>
+
     <script src="/javascripts/bundle.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
   </body>
